--- a/src/site/asciidoc/rip/what-is-valid8j.adoc
+++ b/src/site/asciidoc/rip/what-is-valid8j.adoc
@@ -137,7 +137,7 @@ This is why you should prefer `valid8j` over existing value checking libraries s
 == References
 
 - [[[DbC, 1]]] Wikipedia article on Design by Contract, https://en.wikipedia.org/wiki/Design_by_contract
-- [[[valid4j, 2]]] valid4j https://www.valid4j.org/[valid4j.org
+- [[[valid4j, 2]]] valid4j https://www.valid4j.org/[valid4j.org]
 - [[[pcond, 3]]] pcond https://dakusui.github.io/pcond/[github.com/pcond]
 - [[[assertions, 4]]] Programming With Assertions https://docs.oracle.com/javase/8/docs/technotes/guides/language/assert.html
 - [[[Preconditions-guava, 5]]] Preconditions, Google Guava https://guava.dev/releases/19.0/api/docs/com/google/common/base/Preconditions.html[Preconditions class]
