--- a/src/site/asciidoc/valid8j-pcond.adoc
+++ b/src/site/asciidoc/valid8j-pcond.adoc
@@ -39,7 +39,7 @@ Have a following maven dependency in your `pom.xml`.
 </dependency>
 ----
 
-Visit https://oss.sonatype.org/[oss.sonatype.org] to figure out the most recent version of `thincrest-pcond`.
+Visit https://oss.sonatype.org/[oss.sonatype.org] to figure out the most recent version of `valid8j-pcond`.
 
 == Programming with `pcond` twins
 
@@ -89,7 +89,7 @@ public class ThincrestExample {
 }
 ----
 
-The programming style of `thincrest-pcond` (or `pcond` in more general) is to first transform a given value into better known type or form, which is more suitable for examining its validity.
+The programming style of `thincrest-pcond` (and `valid8j-pcond` in more general) is to first transform a given value into better known type or form, which is more suitable for examining its validity.
 
 In this example, a given string is first transformed into all upper cases so that it is equal to "HELLO" if we ignore cases.
 
@@ -551,7 +551,7 @@ Because the predicates created by `valid8j-pcond` 's classes will look just norm
 
 The other way around will not happen (fortunately) because `thincrest-pcond` will be a dependency in `test` scope, and it will not be visible from the production scope, which `valid8j-pcond` is usually used.
 
-== Building the `thincrest-pcond` Library
+== Building the `valid8j-pcond` Library
 
 === How to Build the Project
 
